--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -37,18 +37,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "import torch\n",
-      "\n",
       "def get_r(result):\n",
       "    sharpe = result[\"sharpe\"]\n",
       "    expect = result[\"expect\"]\n",
       "    sigma = result[\"sigma\"]\n",
       "    mdd = result[\"mdd\"]\n",
-      "    \n",
-      "    # Calculate reward using sharpe, expect, sigma, mdd\n",
-      "    reward = sharpe * sigma - expect * mdd\n",
-      "    \n",
-      "    # Convert reward to tensor\n",
+      "\n",
+      "    # Calculate reward using the given factors\n",
+      "    reward = sharpe + 0.5 * expect - 0.5 * sigma - 0.2 * mdd\n",
+      "\n",
+      "    # Convert reward to a tensor\n",
       "    reward = torch.tensor([reward])\n",
       "    \n",
       "    return reward\n",
@@ -65,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,45 +79,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 500/500 [01:21<00:00,  6.14it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "RLsearch = RLSEARCH(config)\n",
-    "RLsearch.search(500, '2023-01', '2023-05')\n",
+    "RLsearch.search(1, '2023-01', '2023-05')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RLsearch = RLSEARCH(config)\n",
+    "RLsearch.search(300, '2023-01', '2023-05')\n",
     "\n",
     "optimal = RLsearch.get_w(False)\n",
     "optimal = optimal.detach().numpy()\n",
     "RLsearch.init(optimal)\n",
     "PVs, PFs, TIs, POs, result = RLsearch.test('2023-06', '2023-09')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.35139486, 0.5252091 , 0.06229683, 0.06109918], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "optimal"
    ]
   }
  ],
