--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/hyunjun/workspace/NH\n"
+      "/Users/mac/Desktop/Work Space/securities\n"
      ]
     }
    ],
@@ -37,16 +37,15 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "import torch\n",
+      "\n",
       "def get_r(result):\n",
-      "    sharpe = result[\"sharpe\"]\n",
-      "    expect = result[\"expect\"]\n",
-      "    sigma = result[\"sigma\"]\n",
-      "    mdd = result[\"mdd\"]\n",
-      "\n",
-      "    # Calculate reward using the given factors\n",
-      "    reward = sharpe + 0.5 * expect - 0.5 * sigma - 0.2 * mdd\n",
-      "\n",
-      "    # Convert reward to a tensor\n",
+      "    sharpe = result['sharpe']\n",
+      "    expect = result['expect']\n",
+      "    sigma = result['sigma']\n",
+      "    mdd = result['mdd']\n",
+      "    \n",
+      "    reward = sharpe + (expect / sigma) - (mdd * sigma)\n",
       "    reward = torch.tensor([reward])\n",
       "    \n",
       "    return reward\n",
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.17"
   },
   "orig_nbformat": 4,
   "vscode": {
