--- a/notebooks/final.ipynb
+++ b/notebooks/final.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,30 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "import torch\n",
-      "\n",
-      "def get_r(result):\n",
-      "    sharpe = result['sharpe']\n",
-      "    expect = result['expect']\n",
-      "    sigma = result['sigma']\n",
-      "    mdd = result['mdd']\n",
-      "    \n",
-      "    reward = sharpe + (expect / sigma) - (mdd * sigma)\n",
-      "    reward = torch.tensor([reward])\n",
-      "    \n",
-      "    return reward\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = '샤프지수가 높은 팩터 투자 전략을 찾아줘'\n",
     "\n",
@@ -62,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,17 +67,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "RLsearch = RLSEARCH(config)\n",
-    "RLsearch.search(300, '2023-01', '2023-05')\n",
+    "RLsearch.search(10, '2023-01', '2023-05')\n",
     "\n",
     "optimal = RLsearch.get_w(False)\n",
     "optimal = optimal.detach().numpy()\n",
     "RLsearch.init(optimal)\n",
     "PVs, PFs, TIs, POs, result = RLsearch.test('2023-06', '2023-09')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['EOSE', 'CABA', 'ASTL', 'ARRY', 'IPGP'], dtype=object)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TIs[-1][:5]"
    ]
   }
  ],
